fixed overflow when click on terms of conditions

--- a/src/app/components/main/register-card/register-card.component.scss
+++ b/src/app/components/main/register-card/register-card.component.scss
@@ -17,6 +17,6 @@ textarea {
 }
 
 #tos {
-  overflow: scroll;
-  height: 160px;
+  overflow-y: scroll;
+  height: 100px;
 }
